--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DrinkWise.Starting"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".di.DrinkWiseApplication"
+        android:theme="@style/Theme.DrinkWise">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            >
+            android:theme="@style/Theme.DrinkWise">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
